test/tests/errors/error-function-call.sm
// true
// false
/**/
/**/

program {
    const x = 1;
    output x(4);
}